Override bootstrap dropdown menu styling on content item edit page to prevent bottom of list from being cut off at the bottom of the window in Firefox.

--- a/src/Mvc/MvcTemplates/N2/Resources/Css/framed.css
+++ b/src/Mvc/MvcTemplates/N2/Resources/Css/framed.css
@@ -391,3 +391,9 @@ input.dp-applied {
 .open>.dropdown-menu {
     margin-bottom: 50px;
 }
+
+/* BOOTSTRAP OVERRIDES */
+.addArea .btn-group .dropdown-menu {
+    position: relative;
+    float: none;
+}
